--- a/credits.html
+++ b/credits.html
@@ -5,23 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
-    <style>
-        div, a, footer {
-            padding-left: 25px;
-        }
-
-    </style>
-
 </head>
 <body>
-    <header>
-        <p>this is in the header</p>
-    </header>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,20 +25,6 @@
             </li>
         </div>
       </nav>
-
-      <div class="jumbotron">
-        <h1 class="display-4">welcome to the mush room</h1>
-        <p class="lead">learn about all the coolest mushrooms!!</p>
-        <hr class="my-4">
-        <!---
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        -->
-      </div>
-
-      <footer>
-        <p>this is in the footer</p>
-      </footer>
-
+    <h1>credits</h1>
 </body>
 </html>
