better credits page

--- a/credits.html
+++ b/credits.html
@@ -11,25 +11,47 @@
 </head>
 <body>
     <div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="credits.html">Credits</a>
-            </li>
-        </div>
-      </nav>
+        <header>
+            <p>credits</p>
+        </header>
+    </div>
+   
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                <a class="nav-link" href="index.html">home</a>
+                </li>
+
+                <li class="nav-item">
+                <a class="nav-link" href="#">cool mushrooms!!!</a>
+                </li>
+
+                <li class="nav-item">
+                <a class="nav-link" href="credits.html">credits</a>
+                </li>
+            </div>
+        </nav>
     </div>
 <div>
-    <h1>credits</h1>
+</div>
+
+<div>
+    <h1 class="display-5">this page was made by:</h1>
+    <hr class="my-4">
+</div>
+
+
+<div class="column">
+    <h2>zeynep oghan</h2>
+    <p>paragraph text</p>
+</div>
+<div class="column">
+    <h2>alix noble</h2>
+    <p>paragraph text</p>
+</div>
+
 </div>
 </body>
 </html>
