--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
 <body>
     <div>
         <header>
-            <p>this is in the header</p>
+            <p>home</p>
         </header>
     </div>
     
     <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-        
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">home</a>
                 </li>
+
                 <li class="nav-item">
-                <a class="nav-link" href="credits.html">Credits</a>
+                <a class="nav-link" href="#">cool mushrooms!!!</a>
+                </li>
+
+                <li class="nav-item">
+                <a class="nav-link" href="credits.html">credits</a>
                 </li>
             </div>
         </nav>
