--- a/index.html
+++ b/index.html
@@ -9,8 +9,37 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
     
+    <style>
+        div {
+            padding-left: 25px;
+            padding-right: 25px;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+        }
+
+        body {
+            background-color:lightsteelblue
+        }
+
+        footer, header {
+            min-height: 100%;
+            padding: 10px;
+            
+        }
+
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+
+        .column {
+            width: 50%;
+            float:left;
+            text-align: center;
+        }
+    </style>
 
 </head>
 <body>
@@ -50,7 +79,7 @@
       </div>
 
       <div>
-        <img src="mushroom.jpg" alt="certified* cool mushroom" class="center">
+        <img src="./images/mushroom.jpg" alt="certified* cool mushroom" class="center">
       </div>
       <div>
         <footer>
