updated credits page

--- a/credits.html
+++ b/credits.html
@@ -75,11 +75,13 @@
 
 <div class="column">
     <h2>zeynep oghan</h2>
-    <p>paragraph text</p>
+    <p>cool mushroom page</p>
+    <p>zeyoghan@iastate.edu</p>
 </div>
 <div class="column">
     <h2>alix noble</h2>
-    <p>paragraph text</p>
+    <p>home and credits page</p>
+    <p>anoble@iastate.edu</p>
 </div>
 
 </div>
