--- a/mushrooms.html
+++ b/mushrooms.html
@@ -14,7 +14,7 @@
 
     
 
-<link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -257,7 +257,7 @@
 </footer>
 
 
-    <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 
       
   </body>
