nav bar linked up

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="#">cool mushrooms!!!</a>
+                <a class="nav-link" href="mushrooms.html">cool mushrooms!!!</a>
                 </li>
 
                 <li class="nav-item">
