--- a/credits.html
+++ b/credits.html
@@ -55,7 +55,7 @@
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="#">cool mushrooms!!!</a>
+                <a class="nav-link" href="mushrooms.html">cool mushrooms!!!</a>
                 </li>
 
                 <li class="nav-item">
